--- a/src/MainContainer.css
+++ b/src/MainContainer.css
@@ -1,19 +1,12 @@
-#main-container {
-  padding-top: 3vh;
-  padding-bottom: 65px;
-}
-
-#main-container .row {
-  padding: 15px;
-}
-
 .MainContainer {
   text-align: center;
   position: relative;
+  min-height: 100vh;
 }
 
 .non-footer-content {
-  height: calc(100% - 60px);
+  min-height: calc(100vh - 60px);
+  height: 100%;
 }
 
 .top-row {
@@ -33,8 +26,8 @@
 }
 
 .footer {
-  position: fixed;
-  bottom: 0;
+  /* position: absolute;
+  bottom: 0; */
   width: 100%;
   margin: auto;
   font-size: 0.9em;
